--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,6 @@
-<resources>
+<resources xmlns:tools="http://schemas.android.com/tools">
     <string name="app_name">My Application</string>
+    <string name="preference_file_key" tools:ignore="TypographyDashes">b9195ee6-2e5e-4cfd-a42c-677249a2a47d</string>
+    <string name="show_hidden_key" >show_hidden</string>
+    <string name="show_disabled_key" >show_disabled</string>
 </resources>
