--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -3,4 +3,5 @@
     <string name="preference_file_key" tools:ignore="TypographyDashes">b9195ee6-2e5e-4cfd-a42c-677249a2a47d</string>
     <string name="show_hidden_key">show_hidden</string>
     <string name="show_disabled_key">show_disabled</string>
+    <string name="factory_list_filename">factory_list.json</string>
 </resources>
